--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -7,14 +7,15 @@
         x:Class="Demo.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Demo">
+        Title="Demo"
+        Width="800" Height="600">
 
-    <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+		<TextBlock Text="Login to your account" FontSize="24" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+		<TextBox x:Name="Username" Width="200" Watermark="Username" Margin="0,0,0,10"/>
+		<TextBox x:Name="Password" Width="200" Watermark="Password" Margin="0,0,0,20" PasswordChar="*"/>
+		<Button Content="Login" Width="200" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Click="OnClick"/>
+		<TextBlock x:Name="Message" Foreground="Red" Margin="0,10,0,0" HorizontalAlignment="Center"/>
+	</StackPanel>
 
 </Window>
