--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,21 +1,20 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:Demo.ViewModels"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Demo.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="Demo"
-        Width="800" Height="600">
-
-	<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-		<TextBlock Text="Login to your account" FontSize="24" Margin="0,0,0,20" HorizontalAlignment="Center"/>
-		<TextBox x:Name="Username" Width="200" Watermark="Username" Margin="0,0,0,10"/>
-		<TextBox x:Name="Password" Width="200" Watermark="Password" Margin="0,0,0,20" PasswordChar="*"/>
-		<Button Content="Login" Width="200" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Click="OnClick"/>
-		<TextBlock x:Name="Message" Foreground="Red" Margin="0,10,0,0" HorizontalAlignment="Center"/>
-	</StackPanel>
-
+<Window
+    x:Class="Demo.Views.MainWindow"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:Demo.ViewModels"
+    Title="Demo"
+    Width="800"
+    Height="600"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:DataType="vm:MainWindowViewModel"
+    Icon="/Assets/avalonia-logo.ico"
+    mc:Ignorable="d">
+    <Design.DataContext>
+        <vm:MainWindowViewModel />
+    </Design.DataContext>
+    <TransitioningContentControl Content="{Binding CurrentViewModel}" />
 </Window>
