--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -22,19 +22,26 @@
             Width="200"
             Margin="0,0,0,10"
             Text="{Binding UserName}"
-            Watermark="Username" />
+            Watermark="Phone Number" />
         <TextBox
             Width="200"
-            Margin="0,0,0,20"
+            Margin="0,0,0,30"
             PasswordChar="*"
             Text="{Binding Password}"
             Watermark="Password" />
         <Button
             Width="200"
+			Margin="0,0,0,10"
             HorizontalAlignment="Center"
             HorizontalContentAlignment="Center"
             Command="{Binding LoginCommand}"
             Content="Login" />
+		<Button
+            Width="200"
+            HorizontalAlignment="Center"
+            HorizontalContentAlignment="Center"
+            Command="{Binding RegisterCommand}"
+            Content="Register" />
         <TextBlock
             Margin="0,10,0,0"
             HorizontalAlignment="Center"
