--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -6,46 +6,139 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:Demo.ViewModels"
     d:DesignHeight="450"
-    d:DesignWidth="800"
     x:DataType="vm:LoginViewModel"
-    mc:Ignorable="d">
-    <Design.DataContext>
-        <vm:LoginViewModel />
-    </Design.DataContext>
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock
-            Margin="0,0,0,20"
-            HorizontalAlignment="Center"
-            FontSize="24"
-            Text="Login to your account" />
-        <TextBox
-            Width="200"
-            Margin="0,0,0,10"
-            Text="{Binding UserName}"
-            Watermark="Phone Number" />
-        <TextBox
-            Width="200"
-            Margin="0,0,0,30"
-            PasswordChar="*"
-            Text="{Binding Password}"
-            Watermark="Password" />
-        <Button
-            Width="200"
-			Margin="0,0,0,10"
-            HorizontalAlignment="Center"
-            HorizontalContentAlignment="Center"
-            Command="{Binding LoginCommand}"
-            Content="Login" />
-		<Button
-            Width="200"
-            HorizontalAlignment="Center"
-            HorizontalContentAlignment="Center"
-            Command="{Binding RegisterCommand}"
-            Content="Register" />
-        <TextBlock
-            Margin="0,10,0,0"
-            HorizontalAlignment="Center"
-            Foreground="Red"
-            Text="{Binding Message}" />
-    </StackPanel>
+    mc:Ignorable="d"
+	 Margin="0">
+	<Design.DataContext>
+		<vm:LoginViewModel />
+	</Design.DataContext>
+
+	<UserControl.Styles>
+		<Style Selector="TextBox">
+			<Setter Property="Width" Value="250"/>
+			<Setter Property="Margin" Value="0,0,0,15"/>
+			<Setter Property="FontFamily" Value="Segoe UI"/>
+			<Setter Property="FontSize" Value="14"/>
+			<Setter Property="Padding" Value="10,8"/>
+			<Setter Property="Background" Value="#FFFFFF"/>
+			<Setter Property="BorderBrush" Value="#BDC3C7"/>
+			<Setter Property="BorderThickness" Value="1"/>
+			<Setter Property="CornerRadius" Value="4"/>
+			<Setter Property="Transitions">
+				<Transitions>
+					<BrushTransition Property="BorderBrush" Duration="0:0:0.2"/>
+				</Transitions>
+			</Setter>
+		</Style>
+		<Style Selector="TextBox:focus">
+			<Setter Property="BorderBrush" Value="#3498DB"/>
+			<Setter Property="BorderThickness" Value="2"/>
+		</Style>
+		<Style Selector="TextBox:pointerover">
+			<Setter Property="BorderBrush" Value="#7F8C8D"/>
+		</Style>
+	</UserControl.Styles>
+	
+	<Grid Background="#F0F4F8" Margin="0">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+
+		<!-- Left side (Register button and text) -->
+		<Grid Grid.Column="0" Background="#F0F4F8">
+			<StackPanel HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Margin="20">
+				<TextBlock Margin="0,0,0,20"
+                           HorizontalAlignment="Center"
+                           FontSize="24"
+                           FontWeight="Bold"
+                           TextAlignment="Center"
+                           Foreground="Black"
+                           FontFamily="Segoe UI"
+                           Text="Create an Account" />
+				<TextBlock Margin="0,0,0,10"
+                           HorizontalAlignment="Center"
+                           FontSize="14"
+                           TextWrapping="Wrap"
+                           Foreground="Black"
+                           FontFamily="Segoe UI"
+                           Text="Please fill out the form below to create your account." />
+				<Button Width="200"
+                        Margin="0,20,0,10"
+                        HorizontalAlignment="Center"
+                        HorizontalContentAlignment="Center"
+                        Command="{Binding RegisterCommand}"
+                        Content="Register"
+                        Background="#2ECC71"
+                        Foreground="White"
+                        FontSize="16"
+                        FontFamily="Segoe UI"
+                        BorderThickness="1">
+					<Button.Styles>
+						<Style Selector="Button">
+							<Setter Property="Transitions">
+								<Transitions>
+									<BrushTransition Property="Background" Duration="0:0:0.2"/>
+								</Transitions>
+							</Setter>
+						</Style>
+						<Style Selector="Button:pointerover">
+							<Setter Property="Background" Value="#FF7F00"/>
+							<Setter Property="Cursor" Value="Hand"/>
+						</Style>
+					</Button.Styles>
+				</Button>
+			</StackPanel>
+		</Grid>
+
+		<!-- Right side (Login form) -->
+		<Grid Grid.Column="1" Background="#FFFFFF">
+			<StackPanel HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Margin="20">
+				<TextBlock Margin="0,0,0,20"
+                           HorizontalAlignment="Center"
+                           FontSize="24"
+                           Foreground="Black"
+                           FontFamily="Segoe UI"
+                           Text="Login to your account" />
+				<TextBox Text="{Binding UserName}"
+                         Watermark="Phone Number"/>
+				<TextBox PasswordChar="*"
+                         Text="{Binding Password}"
+                         Watermark="Password"/>
+				<Button Width="250"
+                        Margin="0,0,0,10"
+                        HorizontalAlignment="Center"
+                        HorizontalContentAlignment="Center"
+                        Command="{Binding LoginCommand}"
+                        Content="Login"
+                        Background="#2ECC71"
+                        Foreground="White"
+                        FontSize="16"
+                        FontFamily="Segoe UI">
+					<Button.Styles>
+                        <Style Selector="Button">
+                            <Setter Property="Transitions">
+                                <Transitions>
+                                    <BrushTransition Property="Background" Duration="0:0:0.2"/>
+                                </Transitions>
+                            </Setter>
+                        </Style>
+                        <Style Selector="Button:pointerover">
+                            <Setter Property="Background" Value="#FF7F00"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                        </Style>
+                    </Button.Styles>
+				</Button>
+				<TextBlock Margin="0,10,0,0"
+                           HorizontalAlignment="Center"
+                           Foreground="#E74C3C"
+                           FontFamily="Segoe UI"
+                           Text="{Binding Message}" />
+			</StackPanel>
+		</Grid>
+	</Grid>
 </UserControl>
