--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -6,10 +6,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:Demo.ViewModels"
     Title="Demo"
-    Width="800"
-    Height="600"
     d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignWidth="500"
+	Padding="0"
+	ExtendClientAreaToDecorationsHint="True"
+	WindowStartupLocation="CenterScreen"
     x:DataType="vm:MainWindowViewModel"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
