--- a/Views/RegisterView.axaml
+++ b/Views/RegisterView.axaml
@@ -40,117 +40,121 @@
 		</Style>
 	</UserControl.Styles>
 
-    <Grid Background="#F0F4F8" Margin="0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+	<Grid>
+		<Image Source="/Assets/iot2.jpg"
+               Stretch="Fill" />
+		<Grid Background="#B0F0F4F8" Margin="0">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 
-        <!-- Left side (Sign Up form) -->
-        <Grid Grid.Column="1" Background="#FFFFFF">
-            <StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="20">
-                <TextBlock Margin="0,0,0,20"
-                           HorizontalAlignment="Center"
-                           FontSize="24"
-                           Foreground="Black"
-                           FontFamily="Segoe UI"
-                           Text="Sign Up" />
-                <TextBox Text="{Binding UserName}"
-                         Watermark="User Name"/>
-                <TextBox Text="{Binding Phone}"
-                         Watermark="Phone number"/>
-                <TextBox Text="{Binding Email}"
-                         Watermark="Email"/>
-                <TextBox Text="{Binding Address}"
-                         Watermark="Address"/>
-                <TextBox PasswordChar="*"
-                         Text="{Binding Password}"
-                         Watermark="Password"/>
-                <TextBox PasswordChar="*"
-                         Text="{Binding ConfirmPassword}"
-                         Watermark="Confirm Password"/>
-                <Button Width="250"
-                        Margin="0,0,0,10"
-                        HorizontalAlignment="Center"
-                        HorizontalContentAlignment="Center"
-                        Command="{Binding CreateUserCommand}"
-                        Content="Sign Up"
-                        Background="#2ECC71"
-                        Foreground="White"
-                        FontSize="16"
-						CornerRadius="4" 
-						FontFamily="Segoe UI"
-                        BorderThickness="1">
-                    <Button.Styles>
-                        <Style Selector="Button">
-                            <Setter Property="Transitions">
-                                <Transitions>
-                                    <BrushTransition Property="Background" Duration="0:0:0.2"/>
-                                </Transitions>
-                            </Setter>
-                        </Style>
-                        <Style Selector="Button:pointerover">
-                            <Setter Property="Background" Value="#2980B9"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Style>
-                    </Button.Styles>
-                </Button>
-                <TextBlock Margin="0,10,0,0"
-                           HorizontalAlignment="Center"
-                           Foreground="#E74C3C"
-                           FontFamily="Segoe UI"
-                           Text="{Binding Message}" />
-            </StackPanel>
-        </Grid>
+			<!-- Left side (Sign Up form) -->
+			<Grid Grid.Column="1" >
+				<StackPanel HorizontalAlignment="Center"
+							VerticalAlignment="Center"
+							Margin="20">
+					<TextBlock Margin="0,0,0,20"
+							   HorizontalAlignment="Center"
+							   FontSize="24"
+							   Foreground="Black"
+							   FontFamily="Segoe UI"
+							   Text="Sign Up" />
+					<TextBox Text="{Binding UserName}"
+							 Watermark="User Name"/>
+					<TextBox Text="{Binding Phone}"
+							 Watermark="Phone number"/>
+					<TextBox Text="{Binding Email}"
+							 Watermark="Email"/>
+					<TextBox Text="{Binding Address}"
+							 Watermark="Address"/>
+					<TextBox PasswordChar="*"
+							 Text="{Binding Password}"
+							 Watermark="Password"/>
+					<TextBox PasswordChar="*"
+							 Text="{Binding ConfirmPassword}"
+							 Watermark="Confirm Password"/>
+					<Button Width="250"
+							Margin="0,0,0,10"
+							HorizontalAlignment="Center"
+							HorizontalContentAlignment="Center"
+							Command="{Binding CreateUserCommand}"
+							Content="Sign Up"
+							Background="#2ECC71"
+							Foreground="White"
+							FontSize="16"
+							CornerRadius="4"
+							FontFamily="Segoe UI"
+							BorderThickness="1">
+						<Button.Styles>
+							<Style Selector="Button">
+								<Setter Property="Transitions">
+									<Transitions>
+										<BrushTransition Property="Background" Duration="0:0:0.2"/>
+									</Transitions>
+								</Setter>
+							</Style>
+							<Style Selector="Button:pointerover">
+								<Setter Property="Background" Value="#2980B9"/>
+								<Setter Property="Cursor" Value="Hand"/>
+							</Style>
+						</Button.Styles>
+					</Button>
+					<TextBlock Margin="0,10,0,0"
+							   HorizontalAlignment="Center"
+							   Foreground="#E74C3C"
+							   FontFamily="Segoe UI"
+							   Text="{Binding Message}" />
+				</StackPanel>
+			</Grid>
 
-        <!-- Right side (Go back button and text) -->
-        <Grid Grid.Column="0" Background="#F0F4F8">
-            <StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="20">
-                <TextBlock Margin="0,0,0,20"
-                           HorizontalAlignment="Center"
-                           FontSize="24"
-                           FontWeight="Bold"
-                           TextAlignment="Center"
-                           Foreground="Black"
-                           FontFamily="Segoe UI"
-                           Text="Already have an account?" />
-                <TextBlock Margin="0,0,0,10"
-                           HorizontalAlignment="Center"
-                           FontSize="14"
-                           TextWrapping="Wrap"
-                           Foreground="Black"
-                           FontFamily="Segoe UI"
-                           Text="Log in to access your account and start using our services." />
-                <Button Width="200"
-                        Margin="0,20,0,10"
-                        HorizontalAlignment="Center"
-                        HorizontalContentAlignment="Center"
-                        Command="{Binding GoToLoginCommand}"
-                        Content="Go back to Login"
-                        Background="#2ECC71"
-                        Foreground="White"
-                        FontSize="16"
-                        FontFamily="Segoe UI"
-                        BorderThickness="1">
-                    <Button.Styles>
-                        <Style Selector="Button">
-                            <Setter Property="Transitions">
-                                <Transitions>
-                                    <BrushTransition Property="Background" Duration="0:0:0.2"/>
-                                </Transitions>
-                            </Setter>
-                        </Style>
-                        <Style Selector="Button:pointerover">
-                            <Setter Property="Background" Value="#2980B9"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Style>
-                    </Button.Styles>
-                </Button>
-            </StackPanel>
-        </Grid>
-    </Grid>
+			<!-- Right side (Go back button and text) -->
+			<Grid Grid.Column="0" Background="#B0F0F4F8">
+				<StackPanel HorizontalAlignment="Center"
+							VerticalAlignment="Center"
+							Margin="20">
+					<TextBlock Margin="0,0,0,20"
+							   HorizontalAlignment="Center"
+							   FontSize="24"
+							   FontWeight="Bold"
+							   TextAlignment="Center"
+							   Foreground="Black"
+							   FontFamily="Segoe UI"
+							   Text="Already have an account?" />
+					<TextBlock Margin="0,0,0,10"
+							   HorizontalAlignment="Center"
+							   FontSize="14"
+							   TextWrapping="Wrap"
+							   Foreground="Black"
+							   FontFamily="Segoe UI"
+							   Text="Log in to access your account and start using our services." />
+					<Button Width="200"
+							Margin="0,20,0,10"
+							HorizontalAlignment="Center"
+							HorizontalContentAlignment="Center"
+							Command="{Binding GoToLoginCommand}"
+							Content="Go back to Login"
+							Background="#2ECC71"
+							Foreground="White"
+							FontSize="16"
+							FontFamily="Segoe UI"
+							BorderThickness="1">
+						<Button.Styles>
+							<Style Selector="Button">
+								<Setter Property="Transitions">
+									<Transitions>
+										<BrushTransition Property="Background" Duration="0:0:0.2"/>
+									</Transitions>
+								</Setter>
+							</Style>
+							<Style Selector="Button:pointerover">
+								<Setter Property="Background" Value="#2980B9"/>
+								<Setter Property="Cursor" Value="Hand"/>
+							</Style>
+						</Button.Styles>
+					</Button>
+				</StackPanel>
+			</Grid>
+		</Grid>
+	</Grid>
 </UserControl>
