Update test chart

--- a/Views/Styles.axaml
+++ b/Views/Styles.axaml
@@ -57,4 +57,21 @@
         <Setter Property="Cursor" Value="Hand" />
     </Style>
 
+    <Style Selector="Button.topButton">
+        <Setter Property="Background" Value="Red" />
+        <Setter Property="Foreground" Value="#6e7783" />
+        <Setter Property="Width" Value="30" />
+        <Setter Property="Height" Value="30" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="50">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </Styles>
